src/test/ui/issues/issue-20772.stderr
error[E0391]: cycle detected when computing the super traits of `T` with associated type name `Item`
  --> $DIR/issue-20772.rs:1:1
   |
LL | / trait T : Iterator<Item=Self::Item>
LL | |
LL | | {}
   | |__^
   |
   = note: ...which again requires computing the super traits of `T` with associated type name `Item`, completing the cycle
note: cycle used when computing the super traits of `T`
  --> $DIR/issue-20772.rs:1:1
   |
LL | / trait T : Iterator<Item=Self::Item>
LL | |
LL | | {}
   | |__^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
